--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -105,7 +105,7 @@ p {
 /* Paso 6 Bienvenida */
 
 #welcome {
-  background: url('/imagenes/firemblem2.jpg') no-repeat center center/cover;
+  background: url('../imagenes/firemblem2.jpg') no-repeat center center/cover;
   height: 600px;
 }
 
@@ -232,7 +232,7 @@ overflow: hidden;
 /* Testimonos */
 #testimonials {
   height: 600px;
-  background: url('/imagenes/firemblem2.jpg') no-repeat center center/cover;
+  background: url('../imagenes/firemblem2.jpg') no-repeat center center/cover;
   padding-top: 100px;
 }
 
@@ -262,7 +262,7 @@ overflow: hidden;
 
 #testimonials1 {
   height: 600px;
-  background: url('/imagenes/fondo2.jpg') no-repeat center center/cover;
+  background: url('../imagenes/fondo2.jpg') no-repeat center center/cover;
   padding-top: 100px;
 }
 
